Use one PrivilegesEvaluatorContext
Signed-off-by: Craig Perkins <cwperx@amazon.com>